# geoworkbench

./: .env.example  .env.postgres.example  .gitignore  DESCRIPTIVE LITHOLOGY CTSJ-30 (P-02) Running.xlsx  DOC-20260510-WA0000..xlsx  README.md  docker-compose.dev.yml
architecture/: ml-architecture.md  (+4 more)
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_validation_issues.py  0003_workflow_simulation.py  0004_import_profiles_source_files.py  0005_ai_suggestions.py  0006_nullable_lithology_code.py  0007_export_jobs.py  0008_local_auth.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/db/: init_db.py  models.py
backend/app/domains/ai/: router.py  schemas.py  service.py
backend/app/domains/auth/: router.py  schemas.py  service.py
backend/app/domains/boreholes/: router.py  schemas.py  service.py
backend/app/domains/display_layouts/: defaults.py
backend/app/domains/exports/: router.py  schemas.py  service.py
backend/app/domains/imports/: router.py  schemas.py  service.py
backend/app/domains/mobile/: router.py  schemas.py  service.py
backend/app/services/: ai_provider.py  excel_import.py  geophysical_pdf_import.py
backend/geoworkbench_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: attach_spng_pdf_curves_to_pbh_demo.py  create_import_demo_fixtures.py  generate_core_strips.py  import_ctsj_ai_test.py  import_spng_pdf_geophysical_log.py  profile_and_import_excel_workbooks.py  seed_demo.py  seed_synthetic_coal_block.py
(+120 files in other folders)
