[project]
name = "geoworkbench-backend"
version = "0.1.0"
description = "GeoWorkbench borehole correction API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.14.0",
  "python-multipart>=0.0.20",
  "openpyxl>=3.1.0",
  "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]
